--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,9 @@ body{
     padding: 0;
 }
 /* primary style */
+.club{
+    margin-left: 0px;
+}
 main{
     width: 90%;
     margin: 0 auto;
@@ -22,18 +25,24 @@ main{
     color: rgba(255, 255, 255, 0.5);
 }
 .btn-primary{
-    font-size: 18px;
+    padding: 16px 50px;
+    display: inline-block;
+    font-size: 16px;
     font-weight: 600;
     color: white;
-    padding: 15px 30px;
-    border-radius: 42px;
-    background: rgb(230, 83, 60);
+    background-color: red;
     border: 1px solid white;
+    border-radius: 18px;
+    cursor: pointer;
+    text-align: center;
 }
 /* navbar style starts here */
 header{
     width: 90%;
     margin: 0 auto;
+    background-color: black;
+}
+#club{
     background-color: black;
 }
 .nav-container{
@@ -85,16 +94,7 @@ header{
 .banner-description{
     margin-bottom: 25px;
 }
-#download{
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
-    background-color: black;
-    border: 1px solid white;
-    padding: 15px 30px;
-    border-radius: 42px;
-    margin-left: 20px;
-}
+
 .btn-flex{
     display: flex;
 }
@@ -187,11 +187,26 @@ header{
     font-weight: 900;
     margin-bottom: 10px;
 }
+#now-btn{
+    margin-top: 28px;
+}
 .join{
-    margin-top: 30px;
-    padding: 16px 80px;
+    padding: 16px 50px;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    background-color: red;
+    border: 1px solid white;
+    border-radius: 18px;
+    cursor: pointer;
+    text-align: center;
+}
+#club{
+    margin-left: 20px;
 }
 .run-img-container img{
+    width: 100%;
     border-radius: 20px;
 }
 /* gym section style starts here */
@@ -344,6 +359,10 @@ hr{
     header{
         width: 90%;
     }
+    .btn-flex{
+        justify-content: center;
+        align-items: center;
+    }
     .nav-main{
         display: none;
     }
@@ -354,6 +373,13 @@ hr{
     }
     .banner-container{
         flex-direction: column;
+    }
+    .banner-container button{
+        gap: 20px;
+    }
+    .join{
+        padding: 12px 10px;
+        font-size: 12px;
     }
     .btn-tutorial{
         padding: 0px;
@@ -375,14 +401,15 @@ hr{
     /* run section responsive start heree */
     .run-container{
         flex-direction: column;
+        gap: 30px;
     }
     .run-text-description{
         text-align: center;
     }
-    
-    .join{
-        margin: 30px;
+    #now-btn{
+        width: 100%;
     }
+    
     /* trainer section responsive starts here */
     .team-row-1 ,
     .team-row-2{
@@ -394,7 +421,5 @@ hr{
         justify-content: flex-start;
         align-items: flex-start;
     }
-    .fit{
-
-    }
+    
 }
